# shell-like-cui

./: .gitignore  README.md  ansi.py  pyproject.toml  test.py
src/shelllikecui/: __init__.py  base.py  cui.py
