[project]
name = "shell-like-cui"
version = "0.0.1"
description = "shell like CUI"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["cui"]

authors = [
  {name = "userElaina", email = "userelaina@pm.me" }
]
maintainers = [
  {name = "userElaina", email = "userelaina@pm.me" }
]

classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3"
]

dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/userElaina/shell-like-cui"
"Bug Reports" = "https://github.com/userElaina/shell-like-cui/issues"
"Source" = "https://github.com/userElaina/shell-like-cui"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
